--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ body, html {
     width: 100%;
 }
 
+.track1, .track2 {
+    min-width: 200px;
+    min-height: 200px;
+}
+
 .track1 {
     position: absolute;
     left: 25%;
